# ros2_kortex_jetson

./: README.md  moveit2_jetson.md  ros2_kortex.humble.repos  ros2_kortex.repos
kortex_api/: CMakeLists.txt
kortex_bringup/launch/: gen3.launch.py  gen3_lite.launch.py  kortex_control.launch.py
kortex_description/arms/gen3_lite/6dof/config/: ros2_controllers.yaml
kortex_description/launch/: view_robot.launch.py
kortex_description/robots/: gen3_lite_gen3_lite_2f.xacro
kortex_driver/: CMakeLists.txt
kortex_moveit_config/kinova_gen3_6dof_robotiq_2f_85_moveit_config/: CMakeLists.txt
kortex_moveit_config/kinova_gen3_6dof_robotiq_2f_85_moveit_config/launch/: robot.launch.py
kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/: CMakeLists.txt
kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/config/: gen3_lite_pickplace_config.yaml
kortex_moveit_config/kinova_gen3_lite_moveit_config/config/: gen3_lite.ros2_control.xacro  gen3_lite.srdf  gen3_lite.urdf.xacro  gen3_lite_hand.ros2_control.xacro  gen3_lite_pickplace_config.yaml  hand.xacro  initial_positions.yaml  joint_limits copy.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
kortex_moveit_config/kinova_gen3_lite_moveit_config/launch/: pickplace.launch.py  pickplace_gen3.launch.py  robot.launch.py
kortex_moveit_config/launch/: kortex_moveit.launch.py
